# logic

./: example.pl  meson.build
examples/: helloLogic.pl
logic/: environment.cc  environment.h  evaluator.cc  evaluator.h  logic.cc  logic.h  main.cc  parser.cc  parser.h  scanner.cc  scanner.h  sentence.h  sourceLocation.h  token.h  utils.h  value.cc  value.h
logic/evaluation/: environment.cc  environment.h  evaluator.cc  evaluator.h  value.h
logic/parsing/: parser.cc  parser.h  scanner.cc  scanner.h  sentence.cc  sentence.h  sourceLocation.h  token.h
logic/utils/: color.h  macros.h  table.cc  table.h  utils.cc  utils.h
tests/: printer.cc  printer.h  reporter.cc  reporter.h  testEnvironment.cc  testEvaluator.cc  testParser.cc  testRunner.cc  testScanner.cc
